<resources>
    <string name="app_name">RegistrationTest</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="button_preview">Preview Registration</string>
</resources>